--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title><%= title %></title>
-    
+
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1>Bienvenido a <%= title %></h1>
     <p>El portal donde podrá crar sus propios juegos</p>
+    <p><a href="/quizes/question">Comience a jugar</a></p>
   </body>
 </html>
