--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,7 @@
+<form  method="get" action="/quizes">
+  Texto a Buscar :<input type="text" name="search" placeholder="Ingrese su texto"/>
+  <input type="submit" value="Buscar">
+</form>
 <table>
   <% var i; for(i=0; i<quizes.length;i++){ %>
       <tr>
