--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -4,3 +4,22 @@
   <input type="text" name="respuesta" placeholder="Responda aquí"/>
   <input type="submit" value="Enviar">
 </form>
+
+<br>
+<p>
+  <a href="/quizes/<%= quiz.id %>/comments/new">
+    <button>
+        Nuevo Comentario
+    </button>
+  </a>
+</p>
+<br>
+<p>
+  <strong>
+      Comentarios:
+  </strong>
+</p>
+
+<% for(index in quiz.comments ){ %>
+      <p>- <%= quiz.comments[index].texto %></p>
+<% } %>
