--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,28 +2,34 @@
   Texto a Buscar :<input type="text" name="search" placeholder="Ingrese su texto"/>
   <input type="submit" value="Buscar">
 </form>
+<p>
 <table>
   <% var i; for(i=0; i<quizes.length;i++){ %>
       <tr>
-        
+
         <td>
           <a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %>
           </a>
         </td>
-        <td>
-          <a href="quizes/<%= quizes[i].id %>/edit">
-            <button>Editar</button>
-          </a>
-        </td>
-        <td>
-            <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-                <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-                  Borrar
-                </button>
-            </form>
-        </td>
+        <% if(session.user) {%>
+          <td>
+            <a href="quizes/<%= quizes[i].id %>/edit">
+              <button>Editar</button>
+            </a>
+          </td>
+          <td>
+              <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+                  <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+                    Borrar
+                  </button>
+              </form>
+          </td>
+        <%}%>
       </tr>
   <% } %>
 </table>
+</p>
 <br>
+<% if(session.user){%>
 <a href="/quizes/new"><button type="button" >Crear pregunta </button></a>
+<%}%>
